istio/singlestack-withkind/apps/egress-demo/tcp/edr.yaml
# 2:DR to force istio mtls from sidecar to egress gateway
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: redis-egressgw-dr
spec:
  # default export to localns because of svc hierarchy . since host is owned by istio-system ns. if this is applied in istio-system ns, then it will be exported everywhere.
  exportTo:
  - "."
  host: istio-egressgateway.istio-system.svc.cluster.local
  subsets:
  - name: redis
    trafficPolicy:
      loadBalancer:
        simple: ROUND_ROBIN
      portLevelSettings:
      - port:
          number: 443
        tls:
          mode: ISTIO_MUTUAL
          sni: redis.abasitt.tech
