istio/singlestack-withkind/apps/egress-demo/tcp/vs.yaml
# 3: mes VS to route from sidecar to egw
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: redis-mesh-vs
spec:
  # limit the tcp route to ns e.g. default in this case.
  # istioctl pc l sleep-9454cc476-fcsgl.demo --port 6379
  # ADDRESS       PORT MATCH DESTINATION
  # 240.240.152.6 6379 ALL   Cluster: outbound|443|redis|istio-egressgateway.istio-system.svc.cluster.local
  # changed to
  # 240.240.152.6 6379 ALL   Cluster: outbound|6379||redis.abasitt.tech    # this will completely disappear once I make SE export to .
  exportTo:
  - "."
  hosts:
  - redis.abasitt.tech
  gateways:
  - mesh
  tcp:
  - match:
      #destinationSubnets: #since it's tcp, matching just on port could have wrong routing impact, advisable to use redis VIP here.
      #- $MONGODB_IP/32
      - port: 6379
    route:
    - destination:
        host: istio-egressgateway.istio-system.svc.cluster.local
        subset: redis
        port:
          number: 443

# 5: egw vs to route from egw to final destination
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: redis-egw-vs
spec:
  hosts:
  - redis.abasitt.tech
  gateways:
  - redis-egressgw
  tcp:
  - match:
      - port: 443
    route:
    - destination:
        host: redis.abasitt.tech
        port:
          number: 6379
      weight: 100
